--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="column">
-        <div class="content" onclick="window.location.href='';">
+        <div class="content" onclick="window.location.href='pde.html';">
             <img src="LpPLot5.png" alt="PDE" style="width:100%">
             <h3>Partial Diffential Equation Optimization</h3>
             <h3 class="unbold">9/18 - 4/19</h3>
