add nice pictures and some explanations

--- a/about.html
+++ b/about.html
@@ -41,15 +41,9 @@ better understand the world and make  cool shit.
 <br>  
 <a href="mailto: nehilpu1@msu.edu">Send Me An Email</a>
 </div>
-<div class="portrait-div"></div>
-<div>
-  <img class="miscimg" src="4D2e3HbNrFLeBIyXAxWA9yzdMTcWOCbd7A4jsIm30CQeJxFPc.jpg" alt="weightlifting">
-</div>
-<div>
-    <img  class="miscimg" src="IMG_20190511_165900.jpg" alt="boat">
-</div>
-<div>
-      <img  class="miscimg" src="IMG_20190509_065551.jpg" alt="sunrise">
+
+<div class="project_picture">
+  <img src="PXL_20201116_212724098.jpg">
 </div>
 </body>
 </html>
