--- a/blob.html
+++ b/blob.html
@@ -16,18 +16,18 @@
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
     </div> -->
-    
+
     <div class="header" onclick="window.location.href='index.html';">
-        <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='/';"
-            alt="Logo" width="100" height="100">
+        <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='/';" alt="Logo"
+            width="100" height="100">
     </div>
 
     <h3>Background</h3>
     <p>
-        This was the first project I began seriously working on for my research.  
+        This project was the 
     </p>
     <div class="project_picture">
-        <img src="LpPLot5.png" alt="convergence">
+        <img src="image.png" alt="convergence">
     </div>
     <p>
     </p>
