--- a/projects.html
+++ b/projects.html
@@ -16,10 +16,21 @@
 <div class="portfolio">
 <div class="row">
     <div class="column">
+        <div class="content" onclick="window.location.href='blob.html';">
+            <img src="Image.png" alt="Blob" style="width:100%">
+            <h3>Unsupervised Blob indentification</h3>
+            <h3 class="unbold">8/2019 - Now</h3class="unbold">
+                <p>
+                    Algorithm design and software development
+                </p>
+    
+        </div>
+    </div>
+    <div class="column">
         <div class="content" onclick="window.location.href='bear.html';">
-            <img src="IMG_20191012_153237.jpg" alt="Bear's Head" style="width:100%">
+            <img src="IMG_20200923_183241.jpg" alt="Bear's Head" style="width:100%">
             <h3>Mushroom Cultivation</h3>
-            <h3 class="unbold">9/19 - 2/20</h3>
+            <h3 class="unbold">9/2019 - 2/2020</h3>
 
         </div>
     </div>
@@ -27,26 +38,16 @@
         <div class="content" onclick="window.location.href='pde.html';">
             <img src="LpPLot5.png" alt="PDE" style="width:100%">
             <h3>Partial Diffential Equation Optimization</h3>
-            <h3 class="unbold">9/18 - 4/19</h3>
+            <h3 class="unbold">9/2018 - 4/2019</h3>
 
         </div>
     </div>
-    <div class="column">
-        <div class="content" onclick="window.location.href='/Projects/Blob';">
-            <img src="Image.png" alt="Blob" style="width:100%">
-            <h3>Unsupervised Blob indentification</h3>
-            <h3 class="unbold">8/19 - Now</h3class="unbold">
-            <p>
-            Algorithm design and software development
-            </p>
 
-        </div>
-    </div>
     <div class="column">
-        <div class="content" onclick="window.location.href='/Projects/Blob';">
+        <div class="content" onclick="window.location.href='';">
             <img src="HeartRate.png" alt="Blob" style="width:100%">
             <h3>Fitbit Data Analysis</h3>
-            <h3 class="unbold">11/18</h3>
+            <h3 class="unbold">11/2018</h3>
         </div>
     </div>
     <!-- <div class="column">
