--- a/bear.html
+++ b/bear.html
@@ -1,5 +1,6 @@
 <html lang="en">
 
+
 <head>
     <meta charset="utf-8">
     <title>Kieran Nehil</title>
@@ -8,16 +9,48 @@
     <meta name="author" content="Kieran Nehil">
 </head>
 
-<body class="portfolio">
-    <div class="header" onclick="window.location.href='/';">
-        <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='/';"
-            alt="Logo" width="100" height="100">
+<body class="homepage">
+    <!-- <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div> -->
+
+    <div class="header" onclick="window.location.href='index.html';">
+        <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='/';" alt="Logo"
+            width="100" height="100">
     </div>
-<h3>Project Summary</h3>
-<p>
-    This project was primarily focused on developing the techniques to grow a monoculture of a specific mushrooms spiece.
-    In this case it was Bear's Head Tooth (Hericium Americanum).
-</p>
+    <div class="project_intro">
+
+        <h1>Background</h1>
+        <p>
+            Here is a recent grow I did of some pearl oysters!
+            I collected the strain from a elm stump in my backyard. I first grew the strain on a petri dish, then transfered to 
+            growing on rye berries. The Final stage was mixing the colonized grains with alkaline sterilized 
+            straw. 
+        </p>
+    </div>
+
+    <div class="project_picture">
+        <img src="IMG_20200923_183241.jpg">
+        <p>
+        </p>
+    </div>
+
+    <div class="project_picture">
+        <img src="IMG_20200925_225848.jpg">
+        <p>
+        </p>
+    </div>
+
+    <div class="project_picture">
+        <img src="IMG_20200605_173455.jpg">
+        <p>
+        </p>
+    </div>
+    <p>
+    </p>
 </body>
 
 </html>
