--- a/blob.html
+++ b/blob.html
@@ -21,13 +21,37 @@
         <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='/';" alt="Logo"
             width="100" height="100">
     </div>
+<div class="project_intro">
 
-    <h3>Background</h3>
+    <h1>Background</h1>
     <p>
-        This project was the 
+        This project was created by me and my research advisor Dr. Eisenlohr. We were exploring different solution schemes
+        for locating peak diffaction maxima in Laue X-ray microdiffaction. After publication I can start releasing the code.
     </p>
+</div>
+ 
     <div class="project_picture">
-        <img src="image.png" alt="convergence">
+        <img src="image.png" >
+        <p>
+            Here is a very nice result, where the red circles represent the predictions made by our program about where a diffraction maxima may be. 
+            This is overlayed on top of the diffraction image that is used as input to our program. 
+        </p>
+    </div>
+
+    <div class="project_picture">
+        <img src="Fred_ww_36_23.png">
+        <p>
+            This is an example of the peridic nature of microdiffraction of metals! The structure you see in the X-rays
+            refelect the ordered crystalline structure of the metal hit by the X-ray. 
+        </p>
+    </div>
+
+    <div class="project_picture">
+        <img src="Fred_ww_25_23_1472-1536_960-1024.png">
+            <p>
+                Example of convolution subsection of full diffraction image. Histogram (left) describes the frequency of the various discrete intensity value of the pixels
+                in the subsection. 
+            </p>
     </div>
     <p>
     </p>
