--- a/travels.html
+++ b/travels.html
@@ -15,7 +15,7 @@
 <div class="slideshow-container">
 
   <div class="header-nomargin">
-    <img class="logoimage-nomargin" onclick="window.location.href='/';"
+    <img class="logoimage-nomargin" onclick="window.location.href='index.html';"
     src="cfa18c749773c0e01b3aae98f82f1f07.png" alt="Logo">
   </div>
 
