--- a/pde.html
+++ b/pde.html
@@ -16,18 +16,38 @@
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
     </div> -->
-    
+
     <div class="header" onclick="window.location.href='index.html';">
-        <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='/';"
-            alt="Logo" width="100" height="100">
+        <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='/';" alt="Logo"
+            width="100" height="100">
+    </div>
+    <div class="project_intro">
+
+        <h1>Background</h1>
+        <p>
+            This was the first real programming project I ever did. It was my sophmore year at MSU and I wanted to make my self of use
+            so I was direct by my research Advisor, Dr. Eisenlohr, to explore the data and see if there was any abnormal behavior occuring 
+            in the convergence algorithm written Fortran. I was able to improve the algortihm by approximately 150% Wall time.  
+        </p>
     </div>
 
-    <h3>Background</h3>
-    <p>
-        This was the first project I began seriously working on for my research.  
-    </p>
     <div class="project_picture">
-        <img src="LpPLot5.png" alt="convergence">
+        <img src="LpPLot5.png">
+        <p>
+            Here is 
+        </p>
+    </div>
+
+    <div class="project_picture">
+        <img src="LpPLot0.png">
+        <p>
+        </p>
+    </div>
+
+    <div class="project_picture">
+        <img src="IMG_20200605_173455.jpg">
+        <p>
+        </p>
     </div>
     <p>
     </p>
