--- a/projects.html
+++ b/projects.html
@@ -43,13 +43,13 @@
         </div>
     </div>
 
-    <div class="column">
+    <!-- <div class="column">
         <div class="content" onclick="window.location.href='';">
             <img src="HeartRate.png" alt="Blob" style="width:100%">
             <h3>Fitbit Data Analysis</h3>
             <h3 class="unbold">11/2018</h3>
         </div>
-    </div>
+    </div> -->
     <!-- <div class="column">
         <div class="content">
             <img src="Image.png" alt="Mountains" style="width:100%">
