--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </div>
 <div class="BigMe" onclick="window.location.href='about.html';">
-  <img src="IMG-20191223-WA0031.jpg" class="gallery__img" alt="Image 1">
+  <img src="PXL_20201116_212724098.jpg" class="gallery__img" alt="Image 1">
   <p>Who I am</p>
 </div>
 <div class="gallery">
