--- a/index.html
+++ b/index.html
@@ -4,32 +4,48 @@
   <meta charset="utf-8">
   <title>Kieran Nehil</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Rozha+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Pragati+Narrow&display=swap" rel="stylesheet">
   <meta name="author" content="Kieran Nehil">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="homepage">
+<body class="thoughts">
+
+  <div class="topnav" id="myTopnav">
+    <a onclick="window.location.href='index.html';" class="active">Home</a>
+    <a onclick="window.location.href='projects.html';">Portfolio</a>
+    <a onclick="window.location.href='about.html';">About</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+
 <div class='Introduction'>
 
   <div class="big-intro">
+
   <div class="header" onclick="window.location.href='index.html';">
     <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='/';" alt="Logo">
   </div>
-  <p>Kieran Nehil<p></p>
+  <p>Kieran Nehil's <p>
+   <p>Personal Website</p>
+  
   </div>
 `
   <div class="small-intro">
-  <p>I built this website from scratch to showcase a bit about me and what i do with my time.
-    Some of the thing I like to study are Computers, Statistics, Business, Strategy, Machine Learning, Material Science, and Mycology.
+  <p>I built this website from scratch to showcase a bit about me and what I do with my time.
+    Some of the thing I like to study are Computers, Statistics, Psychology, Machine Learning, Material Science, and Mycology.
     I have a strong interest in entrepreneurship and innovation and hope to play a part in something that changes the world.</p>
   </div>
 
 </div>
+
 <div class="BigMe" onclick="window.location.href='about.html';">
   <img src="PXL_20201116_212724098.jpg" class="gallery__img" alt="Image 1">
   <p>Who I am</p>
