--- a/projects.html
+++ b/projects.html
@@ -6,9 +6,25 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
     <meta name="author" content="Kieran Nehil">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="homepage">
+<body class="thoughts">
+    <div class="topnav" id="myTopnav">
+        <a onclick="window.location.href='index.html';" class="active">Home</a>
+        <a onclick="window.location.href='projects.html';">Portfolio</a>
+        <a onclick="window.location.href='about.html';">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+    </div>
+    
     <div class="header" onclick="window.location.href='index.html';">
         <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='/';"
             alt="Logo" width="100" height="100">
