--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
             <i class="fa fa-bars"></i>
         </a>
     </div>
-    
+
     <div class="header" onclick="window.location.href='index.html';">
         <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='/';"
             alt="Logo" width="100" height="100">
@@ -34,18 +34,14 @@
     <div class="column">
         <div class="content" onclick="window.location.href='blob.html';">
             <img src="Image.png" alt="Blob" style="width:100%">
-            <h3>Unsupervised Blob indentification</h3>
+            <h3>Blob indentification Algorithm</h3>
             <h3 class="unbold">8/2019 - Now</h3class="unbold">
-                <p>
-                    Algorithm design and software development
-                </p>
-    
         </div>
     </div>
     <div class="column">
         <div class="content" onclick="window.location.href='bear.html';">
             <img src="IMG_20200923_183241.jpg" alt="Bear's Head" style="width:100%">
-            <h3>Mushroom Cultivation</h3>
+            <h3>Wild Strain Mushroom Cultivation</h3>
             <h3 class="unbold">9/2019 - 2/2020</h3>
 
         </div>
