--- a/about.html
+++ b/about.html
@@ -45,8 +45,12 @@ Scholastically, I'm a junior at Michigan State Univesity, pursuing a degrees in 
 and Statistics with a minor in Computational Modeling. I really like integrating cross-disciplinary skills to make
 better understand the world and make  cool shit. 
 </p>
+
 <br>  
 <a href="mailto: nehilpu1@msu.edu">Send Me An Email</a>
+<br>
+<a href="https://github.com/kierannp">Github</a>
+
 </div>
 
 <div class="project_picture">
