--- a/about.html
+++ b/about.html
@@ -18,12 +18,8 @@
 <body class='thoughts'>
 
 
-
-<!-- <div class="portrait">
-<img class='portrait-img' src="imgs/IMG_2256.jpg" width="300" height="300">
-</div> -->
 <div class="header" onclick="window.location.href='index.html';">
-  <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='/';" alt="Logo"
+  <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='index.html';" alt="Logo"
     width="100" height="100">
 </div>
 <div class='BasePara'>
@@ -32,25 +28,21 @@
 </p>
 <br>
 <p>
-My full name is Kieran David Nehil-Puleo, I am a middle class kid from central Michigan. Some interesting interests I practice are 
-Tibetian Buddhist philosophy, strength training, and mycology. 
+My name is Kieran Nehil and this is a website I built from scratch to have a place to show my work.
 </p>
 <br>
 <p>
-Some things I don't like are taking pictures of myself, reading, and apathy.
-</p>
-<br>
-<p>
-Scholastically, I'm a junior at Michigan State Univesity, pursuing a degrees in Material Science Engineering
-and Statistics with a minor in Computational Modeling. I really like integrating cross-disciplinary skills to make
-better understand the world and make  cool shit. 
+I am pursuing a degrees in Material Science Engineering
+and Statistics with a minors in Computational Modeling and Computer Science. I really like integrating cross-disciplinary skills to make
+better understand the world and make  cool shit.
 </p>
 
 <br>  
 <a href="mailto: nehilpu1@msu.edu">Send Me An Email</a>
 <br>
 <a href="https://github.com/kierannp">Github</a>
-
+<br>
+<a href="https://drive.google.com/file/d/1DKn5P-nDxvJcjhoa4vnoQZSA3bNeGtSq/view?usp=sharing">Resume</a>
 </div>
 
 <div class="project_picture">
