--- a/projects.html
+++ b/projects.html
@@ -32,29 +32,28 @@
 <div class="portfolio">
 <div class="row">
     <div class="column">
+        <h3>X-Ray Diffraction PeakSearch Algorithm</h3>
         <div class="content" onclick="window.location.href='blob.html';">
             <img src="Image.png" alt="Blob" style="width:100%">
-            <h3>Blob indentification Algorithm</h3>
-            <h3 class="unbold">8/2019 - Now</h3class="unbold">
+            <h3 class="unbold">8/2019 - Present</h3>
         </div>
     </div>
     <div class="column">
-        <div class="content" onclick="window.location.href='bear.html';">
-            <img src="IMG_20200923_183241.jpg" alt="Bear's Head" style="width:100%">
-            <h3>Wild Strain Mushroom Cultivation</h3>
-            <h3 class="unbold">9/2019 - 2/2020</h3>
-
-        </div>
-    </div>
-    <div class="column">
+        <h3>Partial Diffential Equation Optimization</h3>
         <div class="content" onclick="window.location.href='pde.html';">
             <img src="LpPLot5.png" alt="PDE" style="width:100%">
-            <h3>Partial Diffential Equation Optimization</h3>
             <h3 class="unbold">9/2018 - 4/2019</h3>
 
         </div>
     </div>
+    <div class="column">
+        <h3>Wild Strain Mushroom Cultivation</h3>
+        <div class="content" onclick="window.location.href='bear.html';">
+            <img src="IMG_20200923_183241.jpg" alt="Bear's Head" style="width:100%">
+            <h3 class="unbold">9/2019 - 2/2020</h3>
 
+        </div>
+    </div>
     <!-- <div class="column">
         <div class="content" onclick="window.location.href='';">
             <img src="HeartRate.png" alt="Blob" style="width:100%">
