--- a/about.html
+++ b/about.html
@@ -17,7 +17,15 @@
 
 <body class='thoughts'>
 
-
+  <div class="topnav" id="myTopnav">
+    <a onclick="window.location.href='index.html';" class="active">Home</a>
+    <a onclick="window.location.href='projects.html';">Portfolio</a>
+    <a onclick="window.location.href='about.html';">About</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+  
 <div class="header" onclick="window.location.href='index.html';">
   <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='index.html';" alt="Logo"
     width="100" height="100">
@@ -32,7 +40,7 @@ My name is Kieran Nehil and this is a website I built from scratch to have a pla
 </p>
 <br>
 <p>
-I am pursuing a degrees in Material Science Engineering
+I am pursuing degrees in Material Science Engineering
 and Statistics with a minors in Computational Modeling and Computer Science. I really like integrating cross-disciplinary skills to make
 better understand the world and make  cool shit.
 </p>
