--- a/index.html
+++ b/index.html
@@ -52,38 +52,18 @@
   <p>Who I am</p>
 </div>
 <div class="gallery">
-  <figure class="gallery__item--1" onclick="window.location.href='travels.html';">
-    <img src="IMG_20190509_072754.jpg" class="gallery__img" alt="Image 3">
-    <p>Travels</p>
-  </figure>
-<figure class="gallery__item--4" onclick="window.location.href='thoughts.html';">
+<figure class="gallery__item--1" onclick="window.location.href='travels.html';">
+  <img src="IMG_20190509_072754.jpg" class="gallery__img" alt="Image 3">
+  <p>Travels</p>
+</figure>
+<!-- <figure class="gallery__item--4" onclick="window.location.href='thoughts.html';">
   <img src="kid.jpg" class="gallery__img" alt="Image 2">
   <p>Writing</p>
-</figure>
-<!-- <figure class="gallery__item--3" onclick="window.location.href='/Myco';">
-  <img src="lions.jpg" class="gallery__img" alt="Image 6">
-  <p>Mycology</p>
 </figure> -->
 <figure class="gallery__item--2" onclick="window.location.href='projects.html';">
   <img src="LpPLot5.png" class="gallery__img" alt="Image 4">
   <p>Projects/Research</p>
 </figure>
-<!-- <div class="gallery__item--5" onclick="window.location.href='/Aboutme';">
-  <img src="IMG-20191223-WA0031.jpg" class="gallery__img" alt="Image 1">
-  <p>Who I am</p>
-</div> -->
-<!-- <figure class="gallery__item--6" onclick="window.location.href='/Thoughts';">
-  <img src="IMG_20190509_065528.jpg" class="gallery__img" alt="Image 5">
-  <p>Interesting</p>
-</figure> -->
-<!-- <figure class="gallery__item--7" onclick="window.location.href='/Peaks';">
-  <img src="IMG_1391.jpg" class="gallery__img" alt="Image 7">
-  <p>Peak Flooding</p>
-</figure>
-<figure class="gallery__item--8" onclick="window.location.href='/Voting';">
-  <img src="conv.png" class="gallery__img" alt="Image 8">
-  <p>Voting Convolution</p>
-</figure> -->
 
 </div>
 
@@ -94,8 +74,8 @@
 <br>
 <br>
 <footer class="copyright">
-  <small>&copy; 2010
-  <script>new Date().getFullYear() > 2010 && document.write("-" + new Date().getFullYear());</script>, Kieran Nehil.</small>
+  <small>&copy; 
+  <script>new Date().getFullYear() > 2010 && document.write( new Date().getFullYear());</script>, Kieran Nehil.</small>
 </footer>
 
 
