--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
 
 <body class="thoughts">
     <div class="topnav" id="myTopnav">
-        <a onclick="window.location.href='index.html';" class="active">Home</a>
+        <a onclick="window.location.href='index.html';">Home</a>
         <a onclick="window.location.href='projects.html';">Portfolio</a>
         <a onclick="window.location.href='about.html';">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
