--- a/about.html
+++ b/about.html
@@ -18,14 +18,14 @@
 <body class='thoughts'>
 
   <div class="topnav" id="myTopnav">
-    <a onclick="window.location.href='index.html';" class="active">Home</a>
+    <a onclick="window.location.href='index.html';">Home</a>
     <a onclick="window.location.href='projects.html';">Portfolio</a>
     <a onclick="window.location.href='about.html';">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
   </div>
-  
+
 <div class="header" onclick="window.location.href='index.html';">
   <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='index.html';" alt="Logo"
     width="100" height="100">
