--- a/blob.html
+++ b/blob.html
@@ -17,12 +17,16 @@
 </head>
 
 <body class="thoughts">
-    <!-- <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-    </div> -->
+    
+    <div class="topnav" id="myTopnav">
+        <a onclick="window.location.href='index.html';">Home</a>
+        <a onclick="window.location.href='projects.html';">Portfolio</a>
+        <a onclick="window.location.href='about.html';">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+    
 
     <div class="header" onclick="window.location.href='index.html';">
         <img class='logoimage' src="cfa18c749773c0e01b3aae98f82f1f07.png" onclick="window.location.href='/';" alt="Logo"
