--- a/about.html
+++ b/about.html
@@ -41,12 +41,12 @@ My name is Kieran Nehil and this is a website I built from scratch to have a pla
 <br>
 <p>
 I am pursuing degrees in Material Science Engineering
-and Statistics with a minors in Computational Modeling and Computer Science. I really like integrating cross-disciplinary skills to make
-better understand the world and make  cool shit.
+and Statistics with minors in Computational Modeling and Computer Science. I really like integrating cross-disciplinary skills to
+better understand the world in order to make cool stuff.
 </p>
 
 <br>  
-<a href="mailto: nehilpu1@msu.edu">Send Me An Email</a>
+<a href="mailto: nehilkieran@gmail.com">Send Me An Email</a>
 <br>
 <a href="https://github.com/kierannp">Github</a>
 <br>
