--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@ better understand the world in order to make cool stuff.
 </div>
 
 <div class="project_picture">
-  <img src="PXL_20201116_212724098.jpg">
+  <img src="IMG_2256.JPG">
 </div>
 </body>
 </html>
