--- a/blob.html
+++ b/blob.html
@@ -37,7 +37,8 @@
     <h1>Background</h1>
     <p>
         This project was created by me and my research advisor Dr. Eisenlohr. We were exploring different solution schemes
-        for locating peak diffaction maxima in Laue X-ray microdiffaction. After publication I can start releasing the code.
+        for locating peak diffaction maxima in Laue X-ray microdiffaction. After publication I can start releasing the code. The prior 
+        method for determining the maxima involved fitting a varible size 2D gaussian function to the suspected peak. 
     </p>
 </div>
  
