--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <div class="small-intro">
   <p>I built this website from scratch to showcase a bit about me and what I do with my time.
-    Some of the thing I like to study are Computers, Statistics, Psychology, Machine Learning, Material Science, and Mycology.
+    Some of the things I like to study are Computers, Statistics, Psychology, Machine Learning, Material Science, and Mycology.
     I have a strong interest in entrepreneurship and innovation and hope to play a part in something that changes the world.</p>
   </div>
 
