--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,6 @@
         <div class="content" onclick="window.location.href='pde.html';">
             <img src="LpPLot5.png" alt="PDE" style="width:100%">
             <h3 class="unbold">9/2018 - 4/2019</h3>
-
         </div>
     </div>
     <div class="column">
@@ -51,7 +50,14 @@
         <div class="content" onclick="window.location.href='bear.html';">
             <img src="IMG_20200923_183241.jpg" alt="Bear's Head" style="width:100%">
             <h3 class="unbold">9/2019 - 2/2020</h3>
+        </div>
+    </div>
 
+    <div class="column">
+        <h3>fick1d Python Package</h3>
+        <div class="content" onclick="window.location.href='fick.html';">
+            <img src="sphere.gif" alt="Thin film" style="width:100%">
+            <h3 class="unbold">1/2021</h3>
         </div>
     </div>
 </div>
